added some styling that I now realize didn't apply as I am using bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,9 @@ body {
 }
 
 /* HEADER */
-header{
+header {
     background-color: var(--header);
-
+    color: var(--light);
 }
 
 /* LEFT SIDE */
